Update publications + CV

--- a/publication/boosting-comparison-based-learning/cite.bib
+++ b/publication/boosting-comparison-based-learning/cite.bib
@@ -1,6 +1,7 @@
-@article{perrot2018boosting,
+@inproceedings{perrot2019boosting,
   title={Boosting for Comparison-Based Learning},
   author={Perrot, Micha{\"e}l and von Luxburg, Ulrike},
-  journal={arXiv preprint arXiv:1810.13333},
-  year={2018}
+  booktitle={IJCAI 2019},
+  year={2019},
+  organization={International Joint Conferences on Artificial Intelligence}
 }
