--- a/publication/comparison-based-hierarchical-clustering/cite.bib
+++ b/publication/comparison-based-hierarchical-clustering/cite.bib
@@ -1,6 +1,6 @@
-@article{ghoshdastidar2018foundations,
+@inproceedings{ghoshdastidar2019foundations,
   title={Foundations of Comparison-Based Hierarchical Clustering},
   author={Ghoshdastidar, Debarghya and Perrot, Micha{\"e}l and von Luxburg, Ulrike},
-  journal={arXiv preprint arXiv:1811.00928},
-  year={2018}
+  booktitle={Advances in Neural Information Processing Systems (NeurIPS)},
+  year={2019}
 }
